--- a/css/main.css
+++ b/css/main.css
@@ -305,6 +305,11 @@ body {
   position: relative;
   padding: 40px 0;
 }
+.section__title {
+  opacity: 0.3;
+  text-align: center;
+  letter-spacing: 3px;
+}
 .title {
   text-transform: uppercase;
   font-weight: 900;
@@ -314,6 +319,12 @@ body {
   background: var(--gradient-green);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+}
+.title_xl {
+  font-size: 78px;
+}
+.title_lg {
+  font-size: 56px;
 }
 .title_md {
   font-size: 40px;
@@ -426,40 +437,242 @@ body {
   -ms-border-radius: 50%;
   -o-border-radius: 50%;
 }
-
-/* INTRO */
-.intro__inner {
+.type_block__inner {
   position: relative;
   display: flex;
-  padding-top: 75px;
+  padding: 80px 0;
 }
-.intro__inner .intro__content {
+.type_block__inner .type_block__content {
+  position: relative;
+  z-index: 2;
   flex: 0 0 50%;
 }
-.intro__inner .intro__image {
-  flex: 1;
-}
-.intro__title {
-  margin-bottom: 15px;
-}
-.intro__description {
-  margin-bottom: 40px;
-  max-width: 420px;
-}
-.intro__image {
-  position: relative;
-  z-index: -1;
-}
-.intro__image .circle {
+.type_block__inner .type_block__image {
   position: absolute;
   top: 0;
   right: -35px;
+  width: 50%;
+  height: auto;
 }
-.intro__image-abs {
+.type_block__title {
+  margin-bottom: 15px;
+}
+.type_block__description {
+  margin-bottom: 35px;
+  max-width: 420px;
+}
+.type_block__inner .circle {
+  position: relative;
+  margin-left: auto;
+}
+.type_block__image-abs {
   max-width: 640px;
   height: auto;
   position: absolute;
   top: -50px;
   left: -222px;
 }
-/* END INTRO */
+.intro_sec .type_block__inner .type_block__image {
+  top: 72px;
+}
+
+/* BIKE CAROUSEL */
+.bike_sec__button {
+  text-align: center;
+}
+.bike_carousel {
+  padding: 80px 0 0;
+  margin: 0 -70px;
+}
+.bike_carousel__slide .circle {
+  width: 358px;
+  height: 358px;
+  background: transparent;
+  transition: var(--trs);
+  -webkit-transition: var(--trs);
+  -moz-transition: var(--trs);
+  -ms-transition: var(--trs);
+  -o-transition: var(--trs);
+}
+.bike_carousel__slide.swiper-slide-next .circle {
+  background: var(--gradient-green);
+}
+.bike_carousel__slide.swiper-slide-next .circle .bike_carousel__image {
+  max-width: 520px;
+  filter: none;
+  -webkit-filter: none;
+  opacity: 1;
+}
+.bike_carousel__image {
+  max-width: 360px;
+  height: auto;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  filter: grayscale(100%);
+  -webkit-filter: grayscale(100%);
+  transition: var(--trs);
+  -webkit-transition: var(--trs);
+  -moz-transition: var(--trs);
+  -ms-transition: var(--trs);
+  -o-transition: var(--trs);
+}
+.bike_carousel__title {
+  opacity: 0;
+  transition: var(--trs);
+  -webkit-transition: var(--trs);
+  -moz-transition: var(--trs);
+  -ms-transition: var(--trs);
+  -o-transition: var(--trs);
+  display: block;
+  text-align: center;
+  max-width: 350px;
+  margin: 46px auto 0;
+}
+.bike_carousel__slide.swiper-slide-next .bike_carousel__title {
+  opacity: 1;
+}
+.bike_carousel__button {
+  opacity: 0;
+  visibility: hidden;
+  transition: var(--trs);
+  -webkit-transition: var(--trs);
+  -moz-transition: var(--trs);
+  -ms-transition: var(--trs);
+  -o-transition: var(--trs);
+}
+.bike_carousel__slide.swiper-slide-next .bike_carousel__button {
+  opacity: 1;
+  visibility: visible;
+}
+.bike_carousel .swiper-button-prev,
+.bike_carousel .swiper-button-next {
+  bottom: 82px;
+  top: unset;
+}
+.bike_carousel .swiper-button-prev {
+  left: 410px;
+}
+.bike_carousel .swiper-button-next {
+  right: 410px;
+}
+.swiper-button-prev:after,
+.swiper-rtl .swiper-button-next:after,
+.swiper-button-next:after,
+.swiper-rtl .swiper-button-prev:after {
+  display: none;
+}
+.swiper .swiper-button-prev,
+.swiper .swiper-button-next {
+  width: 36px;
+  height: 36px;
+  background: var(--gradient-green);
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+}
+.swiper .swiper-button-prev::before,
+.swiper .swiper-button-next::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-size: 14px 18px;
+  background-repeat: no-repeat;
+}
+.swiper .swiper-button-prev::before {
+  background-image: url(../images/icons/arrow_left.svg);
+  background-position: 9px 9px;
+}
+.swiper .swiper-button-next::before {
+  background-image: url(../images/icons/arrow_right.svg);
+  background-position: 13px 9px;
+}
+/* END BIKE CAROUSEL */
+
+/* SERVICES ITEMS */
+.services_sec .services_items {
+  margin-top: 40px;
+}
+.services_item {
+  position: relative;
+  display: flex;
+  align-items: center;
+  background: var(--gradient-green);
+  border-radius: 20px;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  -ms-border-radius: 20px;
+  -o-border-radius: 20px;
+  margin-bottom: 25px;
+  padding: 10px 35px;
+}
+.services_item:last-child {
+  margin-bottom: 0;
+}
+.services_item__image {
+  width: 335px;
+  flex: 0 0 335px;
+}
+.services_item__content {
+  flex: 1;
+  padding-left: 70px;
+  color: var(--text-dark);
+}
+.services_item__title {
+  text-transform: uppercase;
+  font-weight: 900;
+}
+.services_item__description {
+  font-weight: 300;
+  margin-top: 5px;
+}
+/* END SERVICES ITEMS */
+
+.type_content .type_content__inner {
+  position: relative;
+}
+.type_content .type_content__inner.type_content__inner-rr {
+  display: flex;
+  flex-direction: row-reverse;
+}
+.type_content .intro__image {
+  position: absolute;
+  top: 20px;
+  right: 0;
+  width: 50%;
+  height: auto;
+}
+.type_content .intro__image .circle {
+  right: 0;
+  position: relative;
+  width: 484px;
+  height: 484px;
+  margin-left: auto;
+  z-index: 1;
+}
+.type_content .intro__description {
+  max-width: 515px;
+}
+.type_content .intro__image .intro__image-abs {
+  max-width: 500px;
+  top: -15px;
+  left: -15px;
+  z-index: 11;
+}
+.img_slider {
+  padding-top: 20px;
+}
+.img_slider .img_slider__slide .intro__image-abs {
+  opacity: 0;
+  visibility: hidden;
+}
+.img_slider .img_slider__slide.swiper-slide-active .intro__image-abs {
+  opacity: 1;
+  visibility: visible;
+}
