--- a/css/media.css
+++ b/css/media.css
@@ -9,23 +9,18 @@
   .header {
     padding: 20px 0;
   }
-  .circle {
-    width: 380px;
-    height: 380px;
-  }
-  .intro__inner {
-    padding-top: 40px;
-  }
-  .intro__image .circle {
-    right: 0;
-  }
-  .intro__image-abs {
-    max-width: 500px;
-    left: -120px;
-    top: -10px;
+  .header__inner-flex .logotype,
+  .header__inner-flex .inline_links {
+    flex: 0 0 20%;
   }
   .main_nav__link {
     font-size: 16px;
+  }
+  .logotype {
+    width: 45px;
+  }
+  .logotype__text {
+    display: none;
   }
   .text {
     font-size: 22px;
@@ -33,15 +28,26 @@
   .btn {
     font-size: 16px;
   }
-  .logotype__text {
-    display: none;
+  .circle {
+    width: 420px;
+    height: 420px;
   }
-  .header__inner-flex .logotype,
-  .header__inner-flex .inline_links {
-    flex: 0 0 20%;
+  .type_block__inner {
+    padding: 40px 0;
   }
-  .logotype {
-    width: 45px;
+  .type_block__inner .type_block__image {
+    right: 0;
+  }
+  .type_block__image-abs {
+    max-width: 540px;
+    left: -120px;
+    top: -10px;
+  }
+  .type_block__description {
+    max-width: 460px;
+  }
+  .intro_sec .type_block__inner .type_block__image {
+    top: 55px;
   }
 }
 
@@ -65,15 +71,15 @@
   .text {
     font-size: 18px;
   }
-  .intro__description {
-    max-width: 350px;
+  .type_block__description {
+    max-width: 360px;
     margin-bottom: 30px;
   }
   .circle {
     width: 300px;
     height: 300px;
   }
-  .intro__image-abs {
+  .type_block__image-abs {
     max-width: 400px;
     left: -100px;
     top: -30px;
@@ -120,44 +126,50 @@
     font-size: 10px;
     letter-spacing: normal;
   }
-  .intro__inner {
+  .type_block__inner {
     flex-direction: column-reverse;
+    padding: 30px 0;
   }
-  .intro__image .circle {
-    position: relative;
-    margin: 0 auto;
+  .type_block__image .circle {
     transform: translateX(40px);
     -webkit-transform: translateX(40px);
     -moz-transform: translateX(40px);
     -ms-transform: translateX(40px);
     -o-transform: translateX(40px);
   }
-  .intro__image-abs {
+  .type_block__inner .type_block__image {
     position: relative;
+    width: 100%;
   }
-  .intro__inner {
-    padding-top: 30px;
+  .type_block__inner .circle {
+    margin: 0 auto;
   }
   .section {
     padding: 30px 0;
   }
-  .intro__inner .intro__content {
+  .type_block__inner .type_block__content {
     flex: 1;
     margin-top: 50px;
     text-align: center;
   }
-  .intro__title {
+  .type_block__title {
     text-align: left;
   }
-  .intro__description {
+  .type_block__description {
     max-width: 100%;
     text-align: left;
   }
-  .intro__btn {
+  .type_block__btn {
     margin: 0 auto;
   }
   .btn {
     padding: 12px 40px;
+  }
+  .intro_sec {
+    padding-top: 40px;
+  }
+  .intro_sec .type_block__inner .type_block__image {
+    top: 0;
   }
 }
 
@@ -173,10 +185,13 @@
   .text {
     font-size: 16px;
   }
-  .intro__image-abs {
+  .type_block__image-abs {
     max-width: 300px;
     left: -85px;
     top: -10px;
+  }
+  .intro_sec {
+    padding-top: 20px;
   }
 }
 
