--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,7 @@
 :root {
   --text-white: #ffffff;
   --text-dark: #23262b;
+  --text-green: #68b551;
   --bg-dark: #23262b;
   --gradient-green: linear-gradient(318.07deg, #68b551 10.19%, #3ab177 92.37%);
   --regular-text: 25px;
@@ -133,6 +134,20 @@ body {
 .header__inner .inline_links {
   justify-content: flex-end;
 }
+.navigation {
+  transition: var(--trs);
+  -webkit-transition: var(--trs);
+  -moz-transition: var(--trs);
+  -ms-transition: var(--trs);
+  -o-transition: var(--trs);
+}
+.navigation.active {
+  opacity: 1;
+  visibility: visible;
+}
+.navigation .line {
+  display: none;
+}
 .logotype {
   text-decoration: none;
 }
@@ -213,6 +228,64 @@ body {
 }
 .main_nav__item-active .main_nav__link::after {
   display: block;
+}
+.mobile_nav {
+  display: none;
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+.mobile_nav__link {
+  color: #82889a;
+  text-decoration: none;
+  font-size: 22px;
+  font-weight: 300;
+  display: inline-flex;
+  align-items: center;
+  padding: 15px 5px;
+}
+.mobile_nav__link:hover {
+  color: #82889a;
+}
+.mobile_nav__item:first-child .mobile_nav__link {
+  padding-top: 0;
+}
+.mobile_nav__item:last-child .mobile_nav__link {
+  padding-bottom: 0;
+}
+.mobile_nav__item svg {
+  width: 30px;
+  height: 30px;
+  margin-right: 15px;
+}
+.mobile_nav__item.marked {
+  background: var(--gradient-green);
+  border-radius: 9px;
+  -webkit-border-radius: 9px;
+  -moz-border-radius: 9px;
+  -ms-border-radius: 9px;
+  -o-border-radius: 9px;
+  margin: 0 -15px;
+  border: 1px solid var(--text-white);
+}
+.mobile_nav__item.marked .mobile_nav__link {
+  width: 100%;
+  color: var(--text-white);
+  padding: 15px 20px;
+}
+.mobile_nav__item.marked svg path {
+  fill: var(--text-white);
+  stroke: var(--text-white);
+}
+.line {
+  display: block;
+  width: 100%;
+  height: 1px;
+  background-image: url(../images/icons/line.svg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  margin: 30px 0;
 }
 .inline_links {
   margin: 0;
