--- a/css/media.css
+++ b/css/media.css
@@ -368,7 +368,7 @@
     background: var(--bg-dark);
     color: var(--text-white);
     font-family: "montserrat-st";
-    font-weight: 400;
+    font-weight: 800;
     position: absolute;
     top: 25px;
     right: 0;
@@ -396,26 +396,34 @@
     display: block;
   }
   .protect_sec .type_block__inner .type_block__content {
-    margin-top: 20px;
+    margin-top: 10px;
   }
   .type_block__single .type_block__image img {
     max-width: 100%;
   }
   .request_block {
-    margin: 0 -30px;
+    background: var(--gradient-green);
   }
   .request_block__wrapper {
+    background: none;
     border-radius: 0;
     -webkit-border-radius: 0;
     -moz-border-radius: 0;
     -ms-border-radius: 0;
     -o-border-radius: 0;
+    padding: 0;
   }
   .request_block__image {
     display: none;
   }
   .request_block__content {
     max-width: 100%;
+  }
+  .sm_block {
+    display: block;
+  }
+  .sm_block.intro_sec {
+    padding: 0 0 80px;
   }
 }
 
@@ -478,7 +486,7 @@
   }
   .services_item__title {
     min-width: 70%;
-    font-size: 18px;
+    font-size: 16px;
   }
   .request_block__content {
     text-align: center;
