--- a/css/main.css
+++ b/css/main.css
@@ -905,6 +905,11 @@ body {
   width: 100%;
   border-bottom: 2px solid rgba(35, 38, 43, 1);
   padding: 10px 0;
+  border-radius: 0;
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  -ms-border-radius: 0;
+  -o-border-radius: 0;
 }
 .form_group .form_input:not(:last-child) {
   margin-bottom: 17px;
@@ -939,4 +944,23 @@ body {
 }
 #popopForm .form_submit {
   margin-top: 30px;
+}
+.imr {
+  display: inline-block;
+  background: var(--gradient-green);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-weight: 900;
+  font-size: 156px;
+  line-height: 1;
+  user-select: none;
+}
+.not_found .type_block__content {
+  text-align: center;
+}
+.not_found .type_block__inner {
+  padding: 50px 0;
+}
+.not_found .type_block__description {
+  max-width: 100%;
 }
